<resources>
    <string name="app_name">KotLite</string>
    <string name="title_activity_maps">Map</string>
    <string name="welcome">Welcome To Kotlite</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="set_location">Set location</string>
    <string name="kotlite">Kotlite</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">SIGN-UP</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="choose_role">Choose Your Role</string>
    <string name="driver">Driver</string>
    <string name="passanger">Passanger</string>
    <string name="welcome_user">Hallo Driver</string>
    <string name="personal_data">Personal Data</string>
    <string name="name_driver">Driver Name</string>
    <string name="username_driver">Username Driver</string>
    <string name="email_driver">Email Driver</string>
    <string name="no_driver">Handphone Number Driver</string>
    <string name="logout">LOG-OUT</string>
    <string name="schedule_your_ride">Schedule Your Ride</string>
    <string name="date_picker">Date Picker</string>
    <string name="time_picker">Time Picker</string>
    <string name="book_ride">Book Ride</string>
    <string name="informasi_kendaraan">Informasi Kendaraan</string>
    <string name="isi_informasi_kendaraan_mu">Isi Informasi Kendaraan Mu</string>
    <string name="what_is_your_car">What is Your Car?</string>
    <string name="kapasitas_kendaraan_mu">Kapasitas Kendaraan Mu?</string>
    <string name="selesai">Selesai</string>
    <string name="pending_list">Pending List</string>
    <string name="terima">Terima</string>
    <string name="tolak">Tolak</string>
    <string name="let_s_ride_now">Let\'s Ride Now</string>
    <string name="done">Done</string>
    <string name="complete_ride">Complete Ride</string>
    <string name="start_ride">Start Ride</string>
    <string name="arrived">Arrived</string>
    <string name="login">Login</string>
    <string name="ride_better">Ride better</string>
    <string name="together">together.</string>
    <string name="join_our_community">Join Our Community</string>
    <string name="passenger">Passenger</string>
    <string name="driver_photo">driverPhoto</string>
    <string name="placeicon">placeIcon</string>
    <string name="dummy_places_pickup">Jl. Keputih, Sukolilo Surabaya</string>
    <string name="dummy_place_drop">Institut Teknologi Sepuluh Nopember</string>
    <string name="choose">Choose</string>
    <string name="dummy_capacity">0 / 4</string>
    <string name="capacity">Capacity</string>
    <string name="dummy_cartype">Jazz</string>
    <string name="dot">dot</string>
    <string name="dummy_distance">4km</string>
    <string name="fee">Fee</string>
    <string name="dummy_fee">12,000</string>
    <string name="call">Call</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="get_in_touch_with_your_passanger">Get In Touch with Your Passanger</string>
    <string name="who_you_will_ride_with">Who You Will Ride With</string>
    <string name="bisma_satria">Bisma Satria</string>
    <string name="don_t_forget_to_notify_your_passanger">Don\'t Forget to Notify Your Passanger</string>
    <string name="your_passanger_status">Your Passanger Status</string>
    <string name="finish_ride">Finish Ride</string>
    <string name="dummy_goodjob">Good Job, Bisma</string>
    <string name="here_s_your_invoice_for_today">Here\'s your invoice for today!</string>
    <string name="dummy_income">Rp. 16,000</string>
    <string name="car_type">Car Type</string>
    <string name="time">Time</string>
    <string name="jazz">Jazz</string>
    <string name="_4">4</string>
    <string name="_02_06_2021_07_00_wib">02–06–2021 07:00 WIB</string>
    <string name="arriving">Arriving</string>
    <string name="your_driver_will_depart_at">Your Driver will Depart at</string>
    <string name="driver_status">Driver Status</string>
    <string name="set_pickup_location">Set Pickup Location</string>
    <string name="set_your_destination">Set your Destination</string>
    <string name="choose_time">Choose Time</string>
    <string name="estimate_pickup_time">Estimate Pickup Time</string>
    <string name="choose_date">Choose Date</string>
    <string name="_7_may">7 May</string>
    <string name="_07_00">07:00</string>
    <string name="when_you_will_go">When you will go?</string>
    <string name="recommendation_list">Recommendation List</string>
    <string name="here_s_driver_that_have_the_same_route_with_you">Here\'s driver that have the same route with you!</string>
    <string name="dummy_date">24 May 2021 23:00 WIB</string>
    <string name="direction">Direction</string>
    <string name="car_capacity">Car Capacity</string>
    <string name="distance">Distance</string>
    <string name="time_taken">Time Taken</string>
</resources>