<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.driver.info.DriverInfoActivity">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/car_info"
        android:layout_margin="36dp"
        android:contentDescription="@string/informasi_kendaraan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="24dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/isi_informasi_kendaraan_mu"
        android:textSize="24sp" />

    <!--CarTyoe-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:startIconDrawable="@drawable/ic_baseline_directions_car_24"
        app:placeholderText="Car Type"
        android:hint="@string/what_is_your_car"
        app:hintAnimationEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtText_carType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
    <!--Capacity-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:startIconDrawable="@drawable/ic_baseline_people_alt_24"
        app:placeholderText="Capacity"
        android:hint="@string/kapasitas_kendaraan_mu">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtText_carCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_selesai"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/black"
        android:text="@string/selesai"
        android:fontFamily="@font/montserrat_light"
        android:textStyle="bold"/>

</LinearLayout>