<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.driver.psgList.PassengerListActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_you_will_ride_with"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/primaryTextColor"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_in_touch_with_your_passanger"
        android:fontFamily="@font/roboto"
        android:textColor="@color/primaryTextColor"
        android:textSize="12sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_accepted_list"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        tools:listitem="@layout/item_psg_acc"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_pendingList"
        android:layout_width="354dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/secondaryColor"
        android:fontFamily="@font/roboto"
        android:text="@string/pending_list"
        android:textColor="@color/primaryColor"
        android:textSize="12sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_ride"
        android:layout_width="354dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:fontFamily="@font/roboto"
        android:text="@string/let_s_ride_now"
        android:textColor="@color/primaryColor"
        android:textSize="12sp"
        android:textStyle="bold"
        app:cornerRadius="10dp"/>

</LinearLayout>