<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_dot"
                app:layout_constraintEnd_toEndOf="@+id/img_pickup"
                app:layout_constraintStart_toStartOf="@+id/img_pickup"
                app:layout_constraintTop_toBottomOf="@+id/img_pickup"
                android:contentDescription="@string/dot" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_dot"
                app:layout_constraintEnd_toEndOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                android:contentDescription="@string/dot" />

            <ImageView
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_dot"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                android:contentDescription="@string/dot" />

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/driver_photo"
                android:src="@drawable/placeholder_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.052"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/primaryDarkColor"
                app:layout_constraintBottom_toTopOf="@+id/tv_pickup"
                app:layout_constraintTop_toBottomOf="@+id/img_profile"
                app:layout_constraintVertical_bias="0.517"
                tools:layout_editor_absoluteX="0dp" />


            <TextView
                android:id="@+id/tv_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/name_driver"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/img_profile"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/capacity"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="16dp"
                android:text="@string/car_type"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@+id/tv_firstname"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_car_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/dummy_cartype"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_profile"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintHorizontal_bias="0.59"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/img_profile"
                app:layout_constraintVertical_bias="0.647" />

            <TextView
                android:id="@+id/tv_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/dummy_capacity"
                android:textColor="@color/primaryTextColor"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_profile"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/img_profile"
                app:layout_constraintVertical_bias="0.647" />

            <ImageView
                android:id="@+id/img_pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:contentDescription="@string/placeicon"
                android:src="@drawable/ic_baseline_place_pickup"
                app:layout_constraintEnd_toEndOf="@+id/img_profile"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/img_profile"
                app:layout_constraintTop_toBottomOf="@+id/img_profile" />

            <TextView
                android:id="@+id/tv_pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxWidth="320dp"
                android:maxLines="1"
                android:text="@string/dummy_places_pickup"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img_pickup"
                app:layout_constraintStart_toEndOf="@+id/img_pickup"
                app:layout_constraintTop_toTopOf="@+id/img_pickup"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:id="@+id/img_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/placeicon"
                android:maxWidth="320dp"
                android:src="@drawable/ic_place_drop"
                app:layout_constraintEnd_toEndOf="@+id/img_pickup"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/img_pickup"
                app:layout_constraintTop_toBottomOf="@+id/img_pickup" />

            <TextView
                android:id="@+id/tv_drop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_medium"
                android:maxLines="1"
                android:text="@string/dummy_place_drop"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toBottomOf="@+id/img_drop"
                app:layout_constraintStart_toEndOf="@+id/img_drop"
                app:layout_constraintTop_toTopOf="@+id/img_drop"
                app:layout_constraintVertical_bias="0.5" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_choose"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/secondaryColor"
                android:fontFamily="@font/roboto"
                android:text="@string/choose"
                android:textColor="@color/primaryColor"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/img_profile"
                app:layout_constraintTop_toBottomOf="@+id/tv_drop" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>