<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.profile.ProfileActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_personal_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/rl_personal_data"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/personal_data"
                android:fontFamily="@font/comfortaa_bold"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tv_name_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:text="@string/name_driver"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_username_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_name_driver"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:text="@string/username_driver"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_email_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_username_driver"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:text="@string/email_driver"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_no_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_email_driver"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:text="@string/no_driver"
                android:fontFamily="@font/montserrat_light"
                android:textSize="15sp" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/red"
        android:text="@string/logout"
        android:fontFamily="@font/montserrat_light"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/nav_view">

    </com.google.android.material.button.MaterialButton>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_menu_nav"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/view_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>